@@ -16,6 +16,7 @@ import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.Map;
 
 @Service
 public class AdRecommendationServiceImpl implements AdRecommendationService {
@@ -31,11 +32,15 @@ public class AdRecommendationServiceImpl implements AdRecommendationService {
 
     /**
      * 获取推荐广告
-     * 实现多阶段组合推荐，确保返回指定数量的广告
+     * 根据用户行为分决定推荐策略：
+     * - 行为分 >= 50: 按兴趣权重分配80%，随机20%
+     * - 行为分 < 50: 权重最高30% + 权重最低20% + 随机50%
+     * - 新用户: 随机推荐
      */
     public List<AdMaterial> getRecommendedAds(String userFingerprint, String website, 
-                                            List<String> positions, String category, int count) {
-        List<AdMaterial> result = new ArrayList<>();
+                                            List<String> positions, String category, String type, int count) {
+
+        List<AdMaterial> result = new ArrayList<>(); // 结果列表
         Set<Long> usedAdIds = new HashSet<>(); // 用于去重
         
         // 如果请求的数量为0或负数，返回空列表
@@ -46,39 +51,40 @@ public class AdRecommendationServiceImpl implements AdRecommendationService {
         // 获取用户画像
         UserProfile userProfile = userProfileService.getUserProfileByFingerprint(userFingerprint);
         
-        // 阶段1：精准投放 - 获取最符合用户画像的广告
-        if (userProfile != null && userProfile.getBehaviorScore() != null && userProfile.getBehaviorScore() >= 50) {
-            List<AdMaterial> precisionAds = getPrecisionAds(userFingerprint, userProfile, category, count);
-            for (AdMaterial ad : precisionAds) {
-                if (usedAdIds.add(ad.getId()) && result.size() < count) {
-                    result.add(ad);
-                }
+        if (userProfile != null && userProfile.getBehaviorScore() != null) {
+            if (userProfile.getBehaviorScore() >= 50) {
+                // 高行为分用户：按兴趣权重分配80%，随机20%
+                result = getRecommendationsForHighBehaviorScore(userFingerprint, userProfile, type, count, usedAdIds);
+            } else {
+                // 低行为分用户：权重最高30% + 权重最低20% + 随机50%
+                result = getRecommendationsForLowBehaviorScore(userFingerprint, userProfile, type, count, usedAdIds);
             }
+        } else {
+            // 新用户：随机推荐
+            result = getRandomRecommendations(count, usedAdIds, type);
         }
         
-        // 阶段2：兴趣探索 - 如果数量不足，补充兴趣探索阶段的广告
-        if (result.size() < count && userProfile != null) {
-            List<AdMaterial> explorationAds = getExplorationAds(userProfile, category, count - result.size());
-            for (AdMaterial ad : explorationAds) {
-                if (usedAdIds.add(ad.getId()) && result.size() < count) {
-                    result.add(ad);
-                }
-            }
-        }
+        return result;
+    }
+    
+    /**
+     * 高行为分用户的推荐策略：按兴趣权重分配80%，随机20%
+     */
+    private List<AdMaterial> getRecommendationsForHighBehaviorScore(String userFingerprint, UserProfile userProfile, 
+                                                                 String type, int count, Set<Long> usedAdIds) {
+        List<AdMaterial> result = new ArrayList<>();
+
+        // 计算按权重推荐的数量（80%）
+        int weightBasedCount = (int) (count * 0.8);
         
-        // 阶段3：冷启动 - 如果数量仍然不足，补充冷启动阶段的广告
-        if (result.size() < count) {
-            List<AdMaterial> coldStartAds = getColdStartAds(category, count - result.size());
-            for (AdMaterial ad : coldStartAds) {
-                if (usedAdIds.add(ad.getId()) && result.size() < count) {
-                    result.add(ad);
-                }
-            }
-        }
+        // 按兴趣权重推荐（精准投放）
+        List<AdMaterial> weightBasedAds = getPrecisionRecommendations(userFingerprint, userProfile, type, weightBasedCount, usedAdIds);
+        result.addAll(weightBasedAds);
         
-        // 阶段4：兜底策略 - 如果仍然不足，补充随机广告
-        if (result.size() < count) {
-            List<AdMaterial> randomAds = getRandomAds(count - result.size(), usedAdIds);
+        // 剩余的20%补充随机广告
+        int remainingCount = count - result.size();
+        if (remainingCount > 0) {
+            List<AdMaterial> randomAds = getRandomRecommendations(remainingCount, usedAdIds, type);
             result.addAll(randomAds);
         }
         
@@ -86,128 +92,210 @@ public class AdRecommendationServiceImpl implements AdRecommendationService {
     }
     
     /**
-     * 获取精准投放阶段的广告
+     * 低行为分用户的推荐策略：权重最高30% + 权重最低20% + 随机50%
      */
-    private List<AdMaterial> getPrecisionAds(String userFingerprint, UserProfile userProfile, String category, int count) {
-        List<AdMaterial> materials;
+    private List<AdMaterial> getRecommendationsForLowBehaviorScore(String userFingerprint, UserProfile userProfile, 
+                                                                 String type, int count, Set<Long> usedAdIds) {
+        List<AdMaterial> result = new ArrayList<>();
         
-        if (category != null && !category.isEmpty()) {
-            materials = adMaterialRepository.findByCategoryAndStatusOrderByBidPriceDesc(category, 1);
-        } else if (userProfile.getCategories() != null && !userProfile.getCategories().isEmpty()) {
-            // 根据用户画像中的类别推荐
-            String[] categories = userProfile.getCategories().split(",");
-            materials = adMaterialRepository.findByCategoryAndStatusOrderByBidPriceDesc(categories[0], 1);
-        } else {
-            // 兜底方案
-            materials = adMaterialRepository.findByCategoryAndStatusOrderByBidPriceDesc("electronics", 1);
+        // 计算各部分推荐数量
+        int topWeightCount = (int) (count * 0.3);      // 权重最高30%
+        int bottomWeightCount = (int) (count * 0.2);   // 权重最低20%
+        
+        // 获取用户兴趣权重
+        Map<String, Double> interests = userProfileService.parseInterests(userProfile);
+        
+        // 获取权重最高的类别广告（兴趣探索）
+        List<AdMaterial> topWeightAds = getExplorationRecommendations(interests, type, topWeightCount, usedAdIds);
+        result.addAll(topWeightAds);
+        
+        // 获取权重最低的类别广告（兴趣探索）
+        int remainingCount = count - result.size();
+        int currentBottomCount = Math.min(bottomWeightCount, remainingCount);
+        List<AdMaterial> bottomWeightAds = getExplorationRecommendationsForLowest(interests, type, currentBottomCount, usedAdIds);
+        result.addAll(bottomWeightAds);
+        
+        // 剩余的50%补充随机广告
+        remainingCount = count - result.size();
+        if (remainingCount > 0) {
+            List<AdMaterial> randomAds = getRandomRecommendations(remainingCount, usedAdIds, type);
+            result.addAll(randomAds);
+        }
+        
+        return result;
+    }
+    
+    /**
+     * 精准投放推荐（高行为分用户）
+     */
+    private List<AdMaterial> getPrecisionRecommendations(String userFingerprint, UserProfile userProfile, 
+                                                        String type, int count, Set<Long> usedAdIds) {
+        List<AdMaterial> result = new ArrayList<>();
+        
+        // 获取用户兴趣权重
+        Map<String, Double> interests = userProfileService.parseInterests(userProfile);
+        
+        if (interests.isEmpty()) {
+            // 如果没有兴趣权重，使用随机推荐
+            return getRandomRecommendations(count, usedAdIds, type);
+        }
+        
+        // 获取所有相关广告
+        List<AdMaterial> allRelevantAds = new ArrayList<>();
+        for (String category : interests.keySet()) {
+            List<AdMaterial> categoryAds;
+            if (type != null && !type.isEmpty()) {
+                // 按指定类型和分类获取启用的广告
+                categoryAds = adMaterialRepository.findByCategoryAndTypeAndStatusOrderByBidPriceDesc(category, type, 1);
+            } else {
+                categoryAds = adMaterialRepository.findByCategoryAndStatusOrderByBidPriceDesc(category, 1);
+            }
+            allRelevantAds.addAll(categoryAds);
         }
         
         // 获取用户行为数据用于计算兴趣权重
         List<UserBehavior> behaviors = userBehaviorRepository.findByUserFingerprint(userFingerprint);
         
         // 计算每个广告的综合得分并排序
-        List<AdMaterial> sortedMaterials = materials.stream()
+        List<AdMaterial> sortedMaterials = allRelevantAds.stream()
+            .filter(ad -> !usedAdIds.contains(ad.getId())) // 过滤已使用的广告
             .sorted((a, b) -> {
                 double scoreA = calculatePrecisionScore(a, userProfile, behaviors);
                 double scoreB = calculatePrecisionScore(b, userProfile, behaviors);
                 return Double.compare(scoreB, scoreA); // 降序排列
             })
-            .collect(Collectors.toList());
+            .toList();
         
         // 返回指定数量的广告
-        return sortedMaterials.size() > count ? sortedMaterials.subList(0, count) : sortedMaterials;
+        List<AdMaterial> selectedAds = sortedMaterials.size() > count ? 
+            sortedMaterials.subList(0, count) : sortedMaterials;
+        
+        result.addAll(selectedAds);
+        
+        // 更新已使用ID集合
+        selectedAds.forEach(ad -> usedAdIds.add(ad.getId()));
+        
+        return result;
     }
     
     /**
-     * 获取兴趣探索阶段的广告
+     * 兴趣探索推荐（高权重类别）
      */
-    private List<AdMaterial> getExplorationAds(UserProfile userProfile, String category, int count) {
-        List<AdMaterial> materials;
+    private List<AdMaterial> getExplorationRecommendations(Map<String, Double> interests, String type, int count, Set<Long> usedAdIds) {
+        if (interests.isEmpty()) {
+            return getRandomRecommendations(count, usedAdIds, type);
+        }
         
-        if (category != null && !category.isEmpty()) {
-            materials = adMaterialRepository.findByCategoryAndStatusOrderByBidPriceDesc(category, 1);
-        } else if (userProfile.getCategories() != null && !userProfile.getCategories().isEmpty()) {
-            // 根据用户画像中的类别推荐
-            String[] categories = userProfile.getCategories().split(",");
-            materials = adMaterialRepository.findByCategoryAndStatusOrderByBidPriceDesc(categories[0], 1);
+        // 获取权重最高的类别
+        String topCategory = interests.entrySet().stream()
+            .max(Map.Entry.comparingByValue())
+            .map(Map.Entry::getKey)
+            .orElse("electronics");
+        
+        List<AdMaterial> categoryAds;
+        if (type != null && !type.isEmpty()) {
+            categoryAds = adMaterialRepository.findByCategoryAndTypeAndStatusOrderByBidPriceDesc(topCategory, type, 1);
         } else {
-            // 兜底方案
-            materials = adMaterialRepository.findByCategoryAndStatusOrderByBidPriceDesc("electronics", 1);
+            categoryAds = adMaterialRepository.findByCategoryAndStatusOrderByBidPriceDesc(topCategory, 1);
         }
         
         // 计算类别匹配度并排序
-        String userCategory = userProfile.getCategories() != null ? 
-            userProfile.getCategories().split(",")[0] : "electronics";
-            
-        List<AdMaterial> sortedMaterials = materials.stream()
+        List<AdMaterial> sortedMaterials = categoryAds.stream()
+            .filter(ad -> !usedAdIds.contains(ad.getId())) // 过滤已使用的广告
             .sorted((a, b) -> {
-                double matchA = a.getCategory().equals(userCategory) ? 1.0 : 0.0;
-                double matchB = b.getCategory().equals(userCategory) ? 1.0 : 0.0;
+                double matchA = a.getBidPrice().doubleValue() * (1 + 0.5); // 类别匹配
+                double matchB = b.getBidPrice().doubleValue() * (1 + 0.5); // 类别匹配
                 
-                double scoreA = a.getBidPrice().doubleValue() * (1 + matchA * 0.5);
-                double scoreB = b.getBidPrice().doubleValue() * (1 + matchB * 0.5);
-                
-                return Double.compare(scoreB, scoreA); // 降序排列
+                return Double.compare(matchB, matchA); // 降序排列
             })
+            .limit(count)
             .collect(Collectors.toList());
         
-        // 返回指定数量的广告
-        return sortedMaterials.size() > count ? sortedMaterials.subList(0, count) : sortedMaterials;
+        // 更新已使用ID集合
+        sortedMaterials.forEach(ad -> usedAdIds.add(ad.getId()));
+        
+        return sortedMaterials;
     }
     
     /**
-     * 获取冷启动阶段的广告
+     * 兴趣探索推荐（低权重类别）
      */
-    private List<AdMaterial> getColdStartAds(String category, int count) {
-        List<AdMaterial> materials = new ArrayList<>();
+    private List<AdMaterial> getExplorationRecommendationsForLowest(Map<String, Double> interests, String type, int count, Set<Long> usedAdIds) {
+        if (interests.isEmpty()) {
+            return getRandomRecommendations(count, usedAdIds, type);
+        }
         
-        if (category != null && !category.isEmpty()) {
-            materials = adMaterialRepository.findByCategoryAndStatusOrderByBidPriceDesc(category, 1);
+        // 获取权重最低的类别
+        String bottomCategory = interests.entrySet().stream()
+            .min(Map.Entry.comparingByValue())
+            .map(Map.Entry::getKey)
+            .orElse("electronics");
+        
+        List<AdMaterial> categoryAds;
+        if (type != null && !type.isEmpty()) {
+            categoryAds = adMaterialRepository.findByCategoryAndTypeAndStatusOrderByBidPriceDesc(bottomCategory, type, 1);
         } else {
-            // 如果没有指定类别，则返回所有启用状态的广告作为兜底
-            materials = adMaterialRepository.findByCategoryAndStatusOrderByBidPriceDesc("electronics", 1); // 默认使用电子产品类别
+            categoryAds = adMaterialRepository.findByCategoryAndStatusOrderByBidPriceDesc(bottomCategory, 1);
         }
         
-        // 添加随机因子
-        Random random = new Random();
-        List<AdMaterial> shuffledMaterials = materials.stream()
+        // 计算类别匹配度并排序
+        List<AdMaterial> sortedMaterials = categoryAds.stream()
+            .filter(ad -> !usedAdIds.contains(ad.getId())) // 过滤已使用的广告
             .sorted((a, b) -> {
-                double scoreA = a.getBidPrice().doubleValue() * random.nextDouble();
-                double scoreB = b.getBidPrice().doubleValue() * random.nextDouble();
-                return Double.compare(scoreB, scoreA); // 降序排列
+                double matchA = a.getBidPrice().doubleValue() * (1 + 0.2); // 类别匹配度较低
+                double matchB = b.getBidPrice().doubleValue() * (1 + 0.2); // 类别匹配度较低
+                
+                return Double.compare(matchB, matchA); // 降序排列
             })
+            .limit(count)
             .collect(Collectors.toList());
         
-        // 返回指定数量的广告
-        return shuffledMaterials.size() > count ? shuffledMaterials.subList(0, count) : shuffledMaterials;
+        // 更新已使用ID集合
+        sortedMaterials.forEach(ad -> usedAdIds.add(ad.getId()));
+        
+        return sortedMaterials;
     }
     
     /**
-     * 获取随机广告作为兜底
+     * 随机推荐
      */
-    private List<AdMaterial> getRandomAds(int count, Set<Long> excludeIds) {
-        // 获取所有启用的广告，排除已使用的
-        List<AdMaterial> allAds = adMaterialRepository.findByStatus(1);
+    private List<AdMaterial> getRandomRecommendations(int count, Set<Long> usedAdIds) {
+        return getRandomRecommendations(count, usedAdIds, null);
+    }
+    
+    /**
+     * 随机推荐（支持类型筛选）
+     */
+    private List<AdMaterial> getRandomRecommendations(int count, Set<Long> usedAdIds, String type) {
+        List<AdMaterial> result = new ArrayList<>();
         
-        // 过滤掉已使用的广告
-        List<AdMaterial> availableAds = allAds.stream()
-            .filter(ad -> !excludeIds.contains(ad.getId()))
-            .collect(Collectors.toList());
-        
-        // 随机打乱并返回指定数量
-        if (availableAds.size() <= count) {
-            return availableAds;
+        List<AdMaterial> availableAds;
+        if (type != null && !type.isEmpty()) {
+            // 按指定类型获取启用的广告，排除已使用的广告
+            availableAds = adMaterialRepository.findByStatusAndType(1, type).stream()
+                .filter(ad -> !usedAdIds.contains(ad.getId()))
+                .collect(Collectors.toList());
+        } else {
+            // 获取所有启用的广告，排除已使用的广告
+            List<AdMaterial> allAds = adMaterialRepository.findByStatus(1);
+            availableAds = allAds.stream()
+                .filter(ad -> !usedAdIds.contains(ad.getId()))
+                .collect(Collectors.toList());
         }
         
-        // 使用随机采样获取指定数量的广告
+        // 随机选择指定数量的广告
         Random random = new Random();
-        List<AdMaterial> result = new ArrayList<>();
-        for (int i = 0; i < count && i < availableAds.size(); i++) {
-            int randomIndex = random.nextInt(availableAds.size() - i) + i;
-            AdMaterial temp = availableAds.get(randomIndex);
-            availableAds.set(randomIndex, availableAds.get(i));
-            availableAds.set(i, temp);
-            result.add(temp);
+        if (availableAds.size() <= count) {
+            result.addAll(availableAds);
+            availableAds.forEach(ad -> usedAdIds.add(ad.getId()));
+        } else {
+            for (int i = 0; i < count && !availableAds.isEmpty(); i++) {
+                int randomIndex = random.nextInt(availableAds.size());
+                AdMaterial selectedAd = availableAds.get(randomIndex);
+                result.add(selectedAd);
+                usedAdIds.add(selectedAd.getId());
+                availableAds.remove(randomIndex); // 避免重复选择
+            }
         }
         
         return result;
